# bevy_hilt

./: Cargo.toml  Readme.md
.cargo/: config.toml
examples/: drop.rs  positioned.rs
examples/utils/: debug.rs  environment.rs  mod.rs  rotates.rs
src/: lib.rs  plugin.rs
src/entities/: camera.rs  collider.rs  mod.rs  path.rs  position.rs
src/mesh/: capsule.rs  cube.rs  cylinder.rs  mod.rs  polyline.rs  segment.rs  sphere.rs  trimesh.rs
src/render/: mod.rs  pass.rs
src/render/shaders/: wireframe.frag  wireframe.vert
src/systems/: collider.rs  path.rs  position.rs  render_pass.rs  visibility.rs
