[package]
name = "bevy_hilt"
version = "0.1.0"
edition = "2021"

[features]
default_main_pass = []
3d = ["bevy_rapier3d"]
2d = ["bevy_rapier2d"]

[dependencies]
bevy = {version = "0.5.0", default-features = false }
bevy_rapier3d = { version = "0.10.0", optional = true }
bevy_rapier2d = { version = "0.10.0", optional = true }

[dev-dependencies]
bevy = "0.5.0"
bevy_devtools = { git = "https://github.com/Bytebuddha/bevy_devtools" }
